added cell to try imports

--- a/LFAutomation/PythonWebinar/basic_automation_troubleshooting.ipynb
+++ b/LFAutomation/PythonWebinar/basic_automation_troubleshooting.ipynb
@@ -31,6 +31,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try imports here"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
